Fix button icons to vertically align with text

--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,7 @@ table tr.editor td textarea {
 	background: #F54121;
 }
 
-.btn i:before {
+.btn i {
 	margin-top: -2px;
 }
 
